tooling/nargo_cli/tests/snapshots/execution_success/regression_9119/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_9119] Circuit output: 1
